Added version_select cell
* Added version model
* Added version dropdown to cuke feature
* Added tests

Change-Id: I5a8412879fa674d3ec171e05c5c025ea937e9aa7

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -1,6 +1,9 @@
 #main_content
 	#toolbar
-		= "Version: " + @version
+		= "Version: #{@version.title} (#{@version.osis})"
+		= render_cell :version_select, :display, :selected => @version
 	%h1= @reference.human
+	- if @reference.copyright
+		%h3= @reference.copyright
 	- @reference.html.each do |r|
 		= r.html_safe
