Added book/chapter cell and tests
Change-Id: I5c0552c7899e64a61354965d79f66354d130c2c7

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -1,7 +1,8 @@
 #main_content
 	#toolbar
 		= "Version: #{@version.title} (#{@version.osis})"
-		= render_cell :version_select, :display, :selected => @version
+		= render_cell :version_selector, :display, :reference => @reference
+		= render_cell :book_selector, :display, :reference => @reference
 	%h1= @reference.human
 	- if @reference.copyright
 		%h3= @reference.copyright
