Added versions list and display
Change-Id: I671f4a4c988bab8a41dcb6ed436c03994e828a6b

--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -4,5 +4,9 @@
 			= @languages[k]
 			%ul
 				- v.each do |k, v|
-					%li.version{class: k == @reference[:version] ? "selected" : ""}
-						=link_to_unless_current "#{v.title} (#{v.osis.upcase})", bible_path(@reference.merge(version: v.osis))
+					- if @reference
+						%li.version{class: k == @reference[:version] ? "selected" : ""}
+							= link_to_unless_current(v, bible_path(@reference.merge(version: v.osis)))
+					- else
+						%li.version
+							= link_to_unless_current v, version_path(v)
