Updated Bible Reference model to use HTML chapters and Text verses
Change-Id: I0ba5f8640897bf0c4beea66b117b458a07bb4c0c

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -6,5 +6,5 @@
 	%h1= @reference.human
 	- if @reference.copyright
 		%h3= @reference.copyright
-	- @reference.html.each do |r|
+	- @reference.contents.each do |r|
 		= r.html_safe
