--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,8 +1,8 @@
 #note
-  %h1= "Show Note"
+  %h1= "My Notes"
   - @notes.each do |note|
     %div{id: "title"}= note.title
-    %div{id: "content"}= note.content
+    %div{id: "content"}= note.content_text
     %div{id: "version"}= note.version
-    %div{id: "reference"}= note.reference
-    %div{id: "status"}= note.status
+    %div{id: "reference"}= references_breakout(note.reference)
+    %div{id: "status"}= note.user_status
