--- a/app/views/versions/show.html.haml
+++ b/app/views/versions/show.html.haml
@@ -1,3 +1,3 @@
 %h1= @version
 .copyright!= @version.info
-%p= link_to "Read This Version", bible_path("gen.1.#{@version.osis}")
+%p= link_to t("read this version"), bible_path("gen.1.#{@version.osis}")
