--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -2,7 +2,7 @@
   %h1= "My Notes"
   - @notes.each do |note|
     %div{id: note.id}
-      %div{class: "title"}= link_to note.title, edit_note_path(note.id)
+      %div{class: "title"}= link_to note.title, note_path(note.id)
       %div{class: "content"}= note.content_text
       %div{class: "version"}= note.version
       %div{class: "reference"}= references_breakout(note.reference)
