--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,9 +1,12 @@
 #note
   %h1= "My Notes"
-  - @notes.each do |note|
-    %div{id: note.id}
-      %div{class: "title"}= link_to note.title, note_path(note.id)
-      %div{class: "content"}= note.content_text
-      %div{class: "version"}= note.version
-      %div{class: "reference"}= references_breakout(note.reference)
-      %div{class: "status"}= note.user_status
+  - if @notes
+    - @notes.each do |note|
+      %div{id: note.id}
+        %div{class: "title"}= link_to note.title, note_path(note.id)
+        %div{class: "content"}= note.content_text
+        %div{class: "version"}= note.version
+        %div{class: "reference"}= references_breakout(note.reference)
+        %div{class: "status"}= note.user_status
+  - else
+    %div{class: "none"}= "Sorry, no notes here!"
