--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -10,15 +10,15 @@
     = f.text_field :title
   %p
     = f.label :content, "Content:"
-    = f.text_field :content
+    = f.text_field :precontent
   %p
     = f.label :version, "Version:"
-    = f.select :version, options_for_select(versions_dropdown, @note.version)
+    = f.select :version, options_for_select(versions_dropdown, @note.version), {:prompt => '--Select--'}
   %p
     = f.label :reference, "Reference:"
     = f.text_field :reference
   %p
     = f.label :user_status, "Status:"
-    = f.select :user_status, options_for_select(object_status, :user_status)
+    = f.select :user_status, options_for_select(object_status, @note.user_status)
   %p
     = f.submit "Save"
