--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -5,8 +5,7 @@
       %div{id: note.id}
         %div{class: "title"}= link_to note.title, note_path(note.id)
         %div{class: "content"}= note.content_text
-        %div{class: "version"}= note.version
-        %div{class: "reference"}= references_breakout(note.reference)
+        %div{class: "reference"}= references_breakout(note.reference, note.version)
         %div{class: "status"}= note.user_status
   - else
     %div{class: "none"}= "Sorry, no notes here!"
