added locale support
Change-Id: I231fb75fd29fece2c9cc4772baa814fb5df0c761

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title= t 'youversion'
+    %title= t('youversion')
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
@@ -14,3 +14,6 @@
     - else
       %p= link_to t("sign in"), sign_in_path
     = yield
+    %select#choose_language{name: "choose_language"}
+      - I18n.available_locales.each do |loc|
+        %option{value: loc, href: url_for(params.merge!(host: with_subdomain(loc.to_s))), selected: loc == I18n.locale}= t("language name", locale: loc)
