--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,4 +16,4 @@
     = yield
     %select#choose_language{name: "choose_language"}
       - I18n.available_locales.each do |loc|
-        %option{value: loc, href: url_for(params.merge!(host: with_subdomain(loc.to_s))), selected: loc == I18n.locale}= t("language name", locale: loc)
+        %option{value: loc, href: url_for(params.merge!(locale: loc)), selected: loc == I18n.locale}= t("language name", locale: loc)
