--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @note, :url => @url_path, :method => @url_method do |f|
+= form_for @note do |f|
   - if @note.errors
     .form_errors
       The following error(s) prevented creation of your note:
@@ -10,7 +10,7 @@
     = f.text_field :title
   %p
     = f.label :content, "Content:"
-    = f.text_area :precontent
+    = f.text_area :content
   %p
     = f.label :version, "Version:"
     = f.select :version, options_for_select(versions_dropdown, @note.version), {:prompt => '--Select--'}
