--- a/app/views/versions/index.html.haml
+++ b/app/views/versions/index.html.haml
@@ -3,4 +3,10 @@
 
 %article
   %h1= t("bible versions")
-  = render_cell :version_selector, :display
+  %ul
+    - @versions.each do |k, v|
+      %li
+        = @languages[k]
+        %ul
+          - v.each do |kk, vv|
+            %li= link_to vv, version_path(vv)
