Notes updates for various methods

--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -5,7 +5,7 @@
       %div{id: note.id}
         %div{class: "title"}= link_to note.title, note_path(note.id)
         %div{class: "content"}= note.content_text
-        %div{class: "reference"}= link_to note.reference, bible_path(note.reference.osis)
+        %div{class: "reference"}= link_to note.reference.human, bible_path(note.reference.osis)
         %div{class: "status"}= note.user_status
   - else
     %div{class: "none"}= "Sorry, no notes here!"
