--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,7 +1,7 @@
 %article
   #note
     %h1= @note.title
-    %p.mute= link_to_references(@note.references)
+    %p.mute= link_to_references(@note.reference)
     %p= raw(@note.content)
     %p
       = label_tag :user_status, "Note Status:"
