--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,11 +1,12 @@
 %article
   #note
     %h1= @note.title
-    %p.mute= link_to_references(@note.reference)
+    %p.mute= link_to_references(@note.references)
     %p= raw(@note.content)
     %p
       = label_tag :user_status, "Note Status:"
       = @note.user_status
+      = button_to('like', like_path(@note.id), :method => :put)
     - if current_auth.user_id == @note.user_id.to_i
       = link_to('edit', edit_note_path(@note.id)) 
       = link_to('delete this note', note_path(@note.id), :confirm => 'Are you sure?', :method => :delete) 
