--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -6,7 +6,7 @@
     %p
       = label_tag :user_status, "Note Status:"
       = @note.user_status
-      = button_to('like', like_path(@note.id), :method => :put)
+      = button_to(@note.like.nil? ? 'like' : 'unlike', like_path(@note.id), :method => :put) unless @note.user_status == 'private'
     - if current_auth.user_id == @note.user_id.to_i
       = link_to('edit', edit_note_path(@note.id)) 
       = link_to('delete this note', note_path(@note.id), :confirm => 'Are you sure?', :method => :delete) 
