Comment out likes widget right now since it's broken

--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,5 +1,5 @@
 - content_for :sidebar do
-  = render_cell :likes_list_widget, :display, likes: @likes, title: "Likes", user_id: @user_id
+  / = render_cell :likes_list_widget, :display, likes: @likes, title: "Likes", user_id: @user_id
   = render '/shared/widget_ad_bible_app'
 
 %article
