Handle case for form for new; version is nil at that point

--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -13,7 +13,7 @@
     = f.text_area :content
   %p
     = f.label :version, "Version:"
-    = f.select :version, options_for_select(versions_dropdown, @note.version), {:prompt => '--Select--'}
+    = f.select :version, options_for_select(versions_dropdown, (@note.version || nil)), {:prompt => '--Select--'}
   %p
     = f.label :reference, "Reference:"
     = f.text_field :reference
