Get Javascripts in order so the delete links etc. work

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -7,6 +7,8 @@
 <!--[if lt IE 9]>
 %script{:src => '/javascripts/html5.js'}
 <![endif]-->
+%script{:src => '/javascripts/jquery.js'}
+%script{:src => '/javascripts/rails.js'}
 %link{:rel => 'stylesheet', :href => '/stylesheets/application.css'}
 - if content_for? :stylesheets
   = yield :stylesheets
