user voice creation

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -1,4 +1,6 @@
 %script{:src => '/javascripts/jquery.js'}
 %script{:src => '/javascripts/application.js'}
+%script{:src => '/javascripts/uservoice.js'}
+
 - if content_for? :javascripts
   = yield :javascripts
