Add by-label index views for Bookmarks

--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for @bookmark do |f|
-  - if @bookmark.errors
+  - if @bookmark.errors.any?
     .form_errors
       The following error(s) prevented creation of your bookmark:
       %ul
