--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -1,8 +1,8 @@
 %ul.pagination
   %li.pagination_first
-    %a{:href => '#'} First Page
+    %a{:href => '#'}=t("first page")
   %li.pagination_previous
-    %a{:href => '#'} Previous Page
+    %a{:href => '#'}=t("previous page")
   %li
     %a{:href => '#'} 1
   %li.highlighted
@@ -16,6 +16,6 @@
   %li
     %a{:href => '#'} 6
   %li.pagination_next
-    %a{:href => '#'} Next Page
+    %a{:href => '#'}=t("next page")
   %li.pagination_last
-    %a{:href => '#'} Last Page
+    %a{:href => '#'}=t("last page")
