--- a/app/views/shared/_action_new_note.html.haml
+++ b/app/views/shared/_action_new_note.html.haml
@@ -1,4 +1,4 @@
 %p.gutter_bottom_half
   %a.action_button_green{:href => '#'}
     %span.icon_plus
-      Write New Note
+      =t("note.write new")
