--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,7 +1,7 @@
 %meta{:charset => 'utf-8'}
 %meta{'http-equiv' => 'x-ua-compatible', :content => 'ie=edge, chrome=1'}
 %title
-  YouVersion
+  =t("youversion")
   |
   = @title
 
