--- a/app/views/beta_registrations/closed.html.haml
+++ b/app/views/beta_registrations/closed.html.haml
@@ -1,2 +1,3 @@
 %article
-  %h1 Sorry, beta's closed.
+  %h2 Try again soon!
+  %p Our system is at capacity right now since lots of helpful people like you are busy testing the new site. We'd love to have you try again in a while!
