cleaned up tests, removed uservoice
Change-Id: I481552db18f883ddcaf8459a3753c51bde84245a

--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -8,7 +8,7 @@
         %a{:href => '/reading-plans'}
           %span Plans
       %li#nav_primary_notes{class: @nav == :notes ? "highlighted" : ""}
-        %a{:href => current_auth ? user_notes_path(current_user) : notes_path}
+        %a{:href => current_auth ? user_notes_path(current_auth.user_id) : notes_path}
           %span Notes
       %li#nav_primary_friends
         %a{:href => '/friends'}
