--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -1,6 +1,6 @@
 %script{:src => '/javascripts/jquery.js'}
 %script{:src => '/javascripts/application.js'}
-%script{:src => '/javascripts/uservoice.js'}
+- # %script{:src => '/javascripts/uservoice.js'}
 %script{:src => "http://include.reinvigorate.net/re_.js"}
 %script{:src => '/javascripts/analytics.js'}
 
